@@ -1,3 +1,8 @@
+2011-11-05  Kai Tietz  <ktietz@redhat.com>
+
+	* _mingw.h.in: Replace always_inline attribute name
+	by __always_inline__.
+
 2011-11-04  Rafal Carr  <funman@videolan.org>
 	    Kai Tietz  <ktietz@redhat.com>
 
